shadow fix (again, previous fix does not work on iOS)

--- a/css/application.css
+++ b/css/application.css
@@ -68,6 +68,10 @@ select:focus{
 
 
 input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
     font-family: 'Lato', sans-serif;
     font-size: 0.8rem;
     width: 470px;
@@ -86,9 +90,6 @@ input {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
 }
 
 input:focus {
@@ -101,6 +102,10 @@ input:focus::placeholder{
 }
 
 textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
     width: 470px;
     height: 110px;
     padding: 15px;
@@ -120,9 +125,6 @@ textarea {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
 }
 
 textarea:focus {
